# sage_memory_rust

./: .gitignore  CLAUDE.md  CLAUDE_INDEX.md  CONSTITUTION.md  Cargo.toml  LESSONS.md  LICENSE  README.md  SAGE_Paper.md  SPEC_SAGE_Rust.md
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
crates/: CLAUDE.md
crates/sage-cli/: CLAUDE.md  Cargo.toml
crates/sage-cli/src/: CLAUDE.md  main.rs
crates/sage-core/: CLAUDE.md  Cargo.toml
crates/sage-core/src/: CLAUDE.md  document.rs  embed.rs  entity.rs  error.rs  graph.rs  ids.rs  lib.rs  ops.rs  query.rs  reader.rs  reward.rs  vector_index.rs
crates/sage-core/tests/: CLAUDE.md  reward_proptest.rs
crates/sage-embed/: CLAUDE.md  Cargo.toml
crates/sage-embed/src/: CLAUDE.md  deterministic.rs  hnsw_index.rs  lib.rs
crates/sage-eval/: CLAUDE.md  Cargo.toml
crates/sage-eval/src/: CLAUDE.md  grpo.rs  lib.rs  metrics.rs  reward_loop.rs  runner.rs
crates/sage-eval/tests/: CLAUDE.md  reward_loop_it.rs  runner_it.rs
crates/sage-graph/: CLAUDE.md  Cargo.toml
crates/sage-graph/src/: CLAUDE.md  lib.rs  mem.rs  sled_store.rs
crates/sage-graph/tests/: CLAUDE.md  mem_integration.rs  sled_integration.rs
crates/sage-llm/: CLAUDE.md  Cargo.toml
crates/sage-llm/examples/: CLAUDE.md  smoke_claude_cli.rs
crates/sage-llm/src/: CLAUDE.md  anthropic.rs  claude_cli.rs  codex_cli.rs  fallback.rs  gemini_cli.rs  lib.rs  minimax.rs  mock.rs  router.rs
crates/sage-reader/: CLAUDE.md  Cargo.toml
crates/sage-reader/src/: CLAUDE.md  addressing.rs  gfm.rs  gfm_reader.rs  gfm_stack.rs  heuristic.rs  lib.rs  llm_planner.rs  planner.rs
crates/sage-reader/tests/: CLAUDE.md  gfm_reader_it.rs  reader_pipeline_it.rs
crates/sage-runtime/: CLAUDE.md  Cargo.toml
crates/sage-runtime/src/: CLAUDE.md  engine.rs  lib.rs
crates/sage-runtime/tests/: CLAUDE.md  embedded_engine_it.rs  engine_it.rs  evolve_it.rs  vector_index_it.rs
crates/sage-writer/: CLAUDE.md  Cargo.toml
crates/sage-writer/src/: CLAUDE.md  action.rs  apply.rs  lib.rs  llm_policy.rs  policy.rs  sanitizer.rs
crates/sage-writer/tests/: CLAUDE.md  sanitizer_proptest.rs  writer_pipeline_it.rs
crates/tests-support/: CLAUDE.md  Cargo.toml
crates/tests-support/src/: CLAUDE.md  contracts.rs  lib.rs  strategies.rs
docs/: CLAUDE.md  M3_BGE_DESIGN.md
examples/: CLAUDE.md
examples/eval_dataset/: CLAUDE.md  README.md  docs.jsonl  queries.json
examples/eval_patents/: CLAUDE.md  docs.jsonl  docs.preview.jsonl  patents.map.jsonl  patents.map.preview.jsonl  queries.json
examples/eval_peplink/: STRATEGY_COMPARISON.md  STRATEGY_PARETO.md  baselines.json  baselines_complexity.json  docs.jsonl  insights.md  patent_ai_rag_answer.md  patents.map.jsonl  queries.json  queries_complexity.json
examples/eval_v2/: CLAUDE.md  README.md  baselines.json  docs.jsonl  queries.json
examples/eval_v3/: CLAUDE.md  README.md  baselines.json  docs.jsonl  queries.json
examples/eval_v4/: CLAUDE.md  analyze_hubs.py  baselines.json  docs.jsonl  queries.json
examples/eval_v5/: CLAUDE.md  docs.jsonl  queries.json
examples/eval_v6/: CLAUDE.md  baselines.json  docs.jsonl  queries.json
examples/eval_v7/: CLAUDE.md  baselines.json  docs.jsonl  queries.json
scripts/: CLAUDE.md  build_complexity_queries.py  build_patent_queries.py  build_peplink_queries.py  build_strategy_sleds.py  ci_local.sh  competitor_breakthrough.py  export_patent_cache_to_sage_jsonl.py  head_to_head_patent_ai.py  peplink_insights.py
scripts/gen-claude-index/: CLAUDE.md  Cargo.toml
scripts/gen-claude-index/src/: CLAUDE.md  main.rs
