[workspace]
resolver = "2"
members = [
    "crates/sage-core",
    "crates/sage-graph",
    "crates/sage-llm",
    "crates/sage-reader",
    "crates/sage-runtime",
    "crates/sage-writer",
    "crates/tests-support",
    "scripts/gen-claude-index",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
# core deps
async-trait    = "0.1"
thiserror      = "1"
anyhow         = "1"
serde          = { version = "1", features = ["derive", "rc"] }
serde_json     = "1"
smol_str       = { version = "0.3", features = ["serde"] }
smallvec       = { version = "1", features = ["serde", "union"] }
ahash          = "0.8"
parking_lot    = "0.12"
tracing        = "0.1"
rand           = { version = "0.8", features = ["std_rng"] }
regex          = "1"

# test deps
tokio          = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
proptest       = "1"
insta          = { version = "1", features = ["json"] }

# internal
sage-core      = { path = "crates/sage-core" }
sage-graph     = { path = "crates/sage-graph" }
sage-llm       = { path = "crates/sage-llm" }
sage-reader    = { path = "crates/sage-reader" }
sage-runtime   = { path = "crates/sage-runtime" }
sage-writer    = { path = "crates/sage-writer" }
tests-support  = { path = "crates/tests-support" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# allowances that conflict with stylistic choices
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
similar_names = "allow"
float_cmp = "allow"
return_self_not_must_use = "allow"
needless_pass_by_value = "allow"
