[package]
name        = "sage-cli"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
publish     = { workspace = true }
description = "Command-line interface for SAGE: demo / stats / query against MemGraphStore or SledGraphStore."

[lints]
workspace = true

[[bin]]
name = "sage"
path = "src/main.rs"

[dependencies]
sage-core    = { workspace = true }
sage-graph   = { workspace = true }
sage-llm     = { workspace = true, features = ["claude-cli", "minimax"] }
sage-reader  = { workspace = true }
sage-runtime = { workspace = true }
sage-writer  = { workspace = true }
sage-embed   = { workspace = true }
sage-eval    = { workspace = true }
clap         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
smallvec     = { workspace = true }
smol_str     = { workspace = true }
