[package]
name        = "sage-core"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
publish     = { workspace = true }
description = "SAGE shared types, traits, and reward interface (no backend deps)."

[lints]
workspace = true

[dependencies]
async-trait  = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
smol_str     = { workspace = true }
smallvec     = { workspace = true }
ahash        = { workspace = true }

[dev-dependencies]
proptest     = { workspace = true }
insta        = { workspace = true }
tokio        = { workspace = true }
