[package]
name        = "sage-embed"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
publish     = { workspace = true }
description = "Embedder backends for SAGE. M3 ships a deterministic hash embedder; real models land later."

[lints]
workspace = true

[features]
default = ["hnsw"]
hnsw    = ["dep:hnsw_rs"]

[dependencies]
sage-core    = { workspace = true }
async-trait  = { workspace = true }
ahash        = { workspace = true }
parking_lot  = { workspace = true }
hnsw_rs      = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
