[package]
name        = "sage-llm"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
publish     = { workspace = true }
description = "LLM client trait + mock backend for SAGE."

[lints]
workspace = true

[dependencies]
sage-core    = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
parking_lot  = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
