[package]
name        = "sage-llm"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
publish     = { workspace = true }
description = "LLM client trait + mock backend for SAGE."

[lints]
workspace = true

[features]
default   = []
anthropic = ["dep:reqwest", "dep:serde_json", "dep:tokio"]

[dependencies]
sage-core    = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true, optional = true }
parking_lot  = { workspace = true }
reqwest      = { workspace = true, optional = true }
tokio        = { workspace = true, optional = true }
tracing      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
