[package]
name        = "sage-reader"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
publish     = { workspace = true }
description = "Memory reader: heuristic query planner + soft addressing. GFM lands in M3."

[lints]
workspace = true

[dependencies]
sage-core    = { workspace = true }
async-trait  = { workspace = true }
ahash        = { workspace = true }
smol_str     = { workspace = true }
smallvec     = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
sage-graph    = { workspace = true }
sage-llm      = { workspace = true }
sage-writer   = { workspace = true }
tests-support = { workspace = true }
tokio         = { workspace = true }
