[package]
name        = "gen-claude-index"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
publish     = { workspace = true }
description = "Generator + checker for CLAUDE.md hierarchy index (CONSTITUTION §3)."

[lints]
workspace = true

[[bin]]
name = "gen-claude-index"
path = "src/main.rs"
